# JARVIS

./: .gitignore  0.50.0  AGENTS.md  DISCORD_VOICE_IMPLEMENTATION.md  JARVIS_DESIGN_DOCUMENT.md  README.md  debug_telegram.py  error.txt  jarvis-wrapper.bat  jarvis-wrapper.sh  jarvis_wrapper.py  launch-whatsapp  launch-whatsapp.bat  launch.bat  list_devices.py  opus.exp  opus.iobj  opus.ipdb  opus.lib  pyproject.toml  quick_jarivs.bat  record_test.py  start-whatsapp.bat  start-whatsapp.sh  start_server.bat  start_server.bat - Shortcut.lnk  start_watch.bat  test_audio.py  test_stt.py  test_tts_volume.py  test_volume_simple.py  test_wake.py  test_woohankyung.py  test_youtube.py  test_youtube_endpoints.py  watch_restart.py
agents/: __init__.py  base.py
agents/orchestrator/: __init__.py  advanced.py
agents/specialized/: __init__.py  code_review.py  creative.py  legacy.py  planning.py  proactive.py  research.py
config/: settings.yaml
config/workflows/: morning_briefing.yaml
core/: __init__.py  assistant.py  cache.py  commands.py  config.py  discord_bot.py  memory_pool.py  performance_monitor.py  rust_tools.py  skills.py  smart_context.py  streaming_interface.py  telegram_bot.py  threading_manager.py  websocket_server.py  whatsapp_bailey_client.py  whatsapp_bot.py
core/automation/: __init__.py  templates.py  triggers.py  workflow_orchestrator.py
core/discord_voice/: __init__.py  opus_encoder.py  tts_player.py  udp_connection.py  voice_websocket.py
core/finetuning/: __init__.py  data.py  export.py  lora.py
core/integration/: platform_manager.py
core/learning/: __init__.py  feedback.py  improvement.py  patterns.py
core/llm/: __init__.py  copilot.py  gemini.py  github_auth.py  ollama.py  optimized_client.py  router.py
debug_tests/: 1.0.0  benchmark_sizes.py  benchmark_vision.py  check_vision.py  debug_detailed.py  debug_ollama.py  debug_screenshot.py  debug_vision.py  error.txt  list_models.py  test_direct_vision.py  test_improved_vision.py  test_screenshot_tool.py  test_tool_replicate.py  test_vision_sizes.py
docs/: DISCORD_VOICE_INTEGRATION.md  documento_investigacion_jarvis.tex
electron/: electronmon.json  index.html  live2d-manager.js  main.js  package-lock.json  package.json  renderer.js
jarvis/: __main__.py  server.py
rust-tools/: Cargo.toml  test.txt  test_input.json  test_output.json
rust-tools/src/: data_processor.rs  file_processor.rs  model_manager.rs
rust-tools/system-control/: Cargo.toml  README.md  build.bat  test.bat
rust-tools/system-control/examples/: demo.rs
rust-tools/system-control/src/: lib.rs  main.rs
scripts/: setup_google_oauth.py  setup_integrations.py
tests/: __init__.py  conftest.py  test_copilot_full.py  test_copilot_quick.py  test_copilot_tools.py  test_httpx_ollama.py  test_httpx_stream.py  test_learning.py  test_proactive.py  test_screenshot_flow.py  test_security.py  test_tool_call.py
tools/: Cargo.toml  __init__.py  app_registry_cache.json  base.py  enhanced.py  er.txt  high_perf_tools.py  registry.py  rust_computation_tools.py  rust_file_tools.py  rust_performance_tools.py
tools/browser/: README.md  __init__.py  playwright_tool.py
tools/code/: __init__.py
tools/files/: __init__.py
tools/integrations/: __init__.py  clipboard.py  discord.py  docker.py  github.py  gmail.py  google_calendar.py  home_assistant.py  obsidian.py  screenshot.py  screentime.py  spotify.py  telegram.py  vlc.py  whatsapp.py  youtube.py
tools/memory/: __init__.py
tools/src/: execute_python.rs  fetch_url.rs  files.rs  lib.rs  run_command.rs  time.rs  web_search.rs
tools/system/: __init__.py  control.py  simple_test.py  test_volume_control.py  time_tools.py  volume_control.py
tools/web/: __init__.py  search.py
(+60 files in other folders)
