[project]
name = "jarvis"
version = "0.1.0"
description = "Local-first voice AI assistant with multi-modal capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    "openwakeword>=0.6.0",
    "faster-whisper>=1.0.0",
    "silero-vad>=0.0.2",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "duckduckgo-search>=6.0.0",
    "lancedb>=0.6.0",
    "sentence-transformers>=2.2.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[project.scripts]
jarvis = "jarvis.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"jarvis/__main__.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
