[package]
name = "jarvis-rust-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
walkdir = "2.3"
rayon = "1.5"

[[bin]]
name = "jarvis-model-manager"
path = "src/model_manager.rs"

[[bin]]
name = "jarvis-file-processor"
path = "src/file_processor.rs"

[[bin]]
name = "jarvis-data-processor"
path = "src/data_processor.rs"
