[package]
name = "system-control"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "A Rust library for controlling system behaviors on Windows"
license = "MIT"
repository = "https://github.com/yourusername/system-control"

[lib]
name = "system_control"
path = "src/lib.rs"

[[bin]]
name = "system-control"
path = "src/main.rs"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "winnt", "handleapi", "processthreadsapi", "synchapi", "winbase", "shellapi", "powrprof", "audioclient", "endpointvolume", "combaseapi", "mmdeviceapi"] }
widestring = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
